# easy-states

./: CMakeLists.txt  README.md  easy_states.hpp  main.cpp
examples/: CMakeLists.txt  main.cpp
include/easy_states/: easy_states.hpp
